assets/styles/modules/lists.scss
/* ... */
#toc {
  position: sticky;
  top: 100px;
  left: inherit;
  z-index: 900;

  @media (min-width: #{$screen-tablet}) {
    display: block;
  }

  h2 {
    color: #6A7A88;
    font-size: 16px;
    font-weight: 900;
    line-height: 30px;
    margin: 0 0 20px;
    border: none;
    text-shadow: none;
    text-transform: uppercase;
  }

  ul {
    float: left;
    width: 100%;
    margin: 0;
    padding-bottom: 0px;

    li {
      list-style-type: none;
      float: left;
      width: 100%;

      a {
        display: inline-block;
        font-size: 14px;
        line-height: 20px;
        color: #153D57;
        border-left: 2px solid #EAEAEA;
        padding-right: 0px;
        padding-top: 10px;

        &.active,
        &:hover,
        &:focus {
          text-decoration: none;
          color: $dark-blue-01;
          font-weight: 700;
          border-left: 2px solid $dark-blue-01;
        }
      }
    }
  }
}

